new build configs for osg. pf may still have some problems. just needs some testing. this update is the initial win commit for vis dll's.

--- a/VE_CE/WinServer.vcproj
+++ b/VE_CE/WinServer.vcproj
@@ -149,8 +149,8 @@
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				RuntimeTypeInfo="TRUE"
-				UsePrecompiledHeader="2"
-				PrecompiledHeaderFile=".\Debug/WinServer.pch"
+				UsePrecompiledHeader="0"
+				PrecompiledHeaderFile=""
 				AssemblerListingLocation=".\Debug/"
 				ObjectFile=".\Debug/"
 				ProgramDataBaseFileName=".\Debug/"
