--- a/VE_Conductor/GUIPluginLib.vcproj
+++ b/VE_Conductor/GUIPluginLib.vcproj
@@ -87,8 +87,8 @@
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;__WXDEBUG__;__WXMSW__;WXUSINGDLL;WXMAKING_PLUGIN_DLL;_USRDLL;DLL_EXPORTS;WINDLL_EXPORTS;_REENTRANT;_STLP_USE_OWN_NAMESPACE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="2"
-				UsePrecompiledHeader="2"
-				PrecompiledHeaderFile=".\Debug/GUIPlugin.pch"
+				UsePrecompiledHeader="0"
+				PrecompiledHeaderFile=""
 				AssemblerListingLocation=".\Debug/"
 				ObjectFile=".\Debug/"
 				ProgramDataBaseFileName=".\Debug/"
